# mincho

./: .envrc  Taskfile.yaml  app.py  pyproject.toml  setup.py  snd.py
mincho/: __init__.py  __main__.py
mincho/api/: client.py  models.py
mincho/core/: config.py
mincho/rpc/: __init__.py
mincho/ui/: __init__.py  app.py  models.py
